force-app/main/default/objects/Invoice_Submission__c/Invoice_Submission__c.object-meta.xml
<CustomObject>
    <label>Invoice Submission</label>
    <nameField>
        <label>Invoice Submission Name</label>
        <type>AutoNumber</type>
        <displayFormat>INV-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Invoice Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>