force-app/main/default/objects/Invoice_Submission__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Submissions</relationshipLabel>
    <relationshipName>Invoice_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>