force-app/main/default/objects/Invoice_Submission__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <label>Content Document Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>