force-app/main/default/objects/Invoice_Submission__c/fields/Duplicate_Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Fingerprint__c</fullName>
    <label>Duplicate Fingerprint</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>