force-app/main/default/objects/Invoice_Submission__c/fields/Raw_JSON__c.field-meta.xml
<CustomField>
    <fullName>Raw_JSON__c</fullName>
    <label>Raw JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>