force-app/main/default/objects/Invoice_Submission__c/fields/Total_Amount_HT__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_HT__c</fullName>
    <label>Total Amount HT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>