force-app/main/default/objects/Invoice_Submission__c/fields/Total_Points_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Total_Points_Awarded__c</fullName>
    <label>Total Points Awarded</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>